# nillebco.github.io

./: CNAME  README.md  TODO.md  behavior.js  cli  create_bsky_post.py  feed.xml  generate_rss.py  index.html  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  style.css  sync_notion_posts.py  two-columns.css
assets/: add_transparency.py  add_transparency_dilate.py  image_processing.py
blog/: blog.css  index.html  layout.css  posts.json
blog/post/: a-custom-gpt-to-query-read-and-write-your-google-drive-files.md  add-comments-to-your-blog-with-bsky-and-atproto.md  ai-mirror-in-the-wall.md  ai-mirror-on-the-wall.md  an-ai-based-instant-messaging-assistant.md  caddy-as-a-reverse-proxy-in-a-podman-rootless-setup.md  clustering-vectors-in-higher-dimensions.md  colima-a-lightweight-docker-replacement.md  create-your-own-transcription-software-on-MacOS.md  create-your-own-transcription-software-on-macos.md  creation-de-eurl-en-france.md  do-you-use-ai-to-evaluate-cvs.md  drive-cursor-with-your-voice-local-setup.md  generate-a-json-schema-for-openai-structured-outputs.md  index.html  knack-generate-a-mapping-from-the-ui.md  (+14 more)
business-card/: back.html  front.html
components/: blog-list.html  bluesky-comments.html  copyright-notice.html  language-toggle.html  logo.html  theme-toggle.html  toast-menu.html
js/: i18n.js  theme.js
locales/: en.json  fr.json
portfolio/: index.html  layout.css  portfolio-fr.md  portfolio.css  portfolio.js  portfolio.md
rtvoice/: index.html
src/: blog-post-logic.js  polyfills.js  portfolio-logic.js
(+1 files in other folders)
