[project]
name = "nillebco-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atproto>=0.0.61",
    "feedgen>=1.0.0",
    "python-dotenv>=1.1.1",
    "python-slugify>=8.0.4",
    "pytz>=2025.2",
    "requests>=2.32.4",
]
